--- a/userPage/user.html
+++ b/userPage/user.html
@@ -6,6 +6,22 @@
     <title>Document</title>
     <script type="module" src="user.js"></script>
     <header>User</header>
+
+    <section>
+        <form id="user-form">
+            <label>
+                Class
+                <input name="class">
+            </label>
+            <label>
+                Name
+                <input name="name">
+            </label>
+            <label
+            
+            <button>Submit</button>
+        </form>
+    </section>
 </head>
 <body>
     
